// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CalendarTile it change styles when two colors appear 1`] = `
<DocumentFragment>
  .c0 {
  border: none;
  width: 50px;
  height: 50px;
  position: relative;
  overflow: hidden;
  background-color: #FFFFFF;
}

.c0:hover {
  cursor: pointer;
}

.c1 {
  position: absolute;
  border-radius: 50%;
  width: 65px;
  height: 65px;
  background-color: #fff;
  top: 0px;
  left: 0px;
}

.c2 {
  position: absolute;
  border-radius: 50%;
  width: 65px;
  height: 65px;
  background-color: #ddd;
  top: 35px;
  left: 35px;
}

.c3 {
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  z-index: 100;
}

@media (min-width:768px) {
  .c0 {
    width: 100px;
    height: 100px;
  }
}

<button
    class="c0"
  >
    <div
      class="c1"
      color="#fff"
      size="65"
    />
    <div
      class="c2"
      color="#ddd"
      size="65"
    />
    <p
      class="c3"
      data-testid="day"
    >
      1
    </p>
  </button>
</DocumentFragment>
`;

exports[`CalendarTile it should render empty tile when day is -1 1`] = `
<DocumentFragment>
  .c0 {
  border: none;
  width: 50px;
  height: 50px;
  position: relative;
  overflow: hidden;
  background-color: #FFFFFF;
}

.c0:hover {
  cursor: pointer;
}

@media (min-width:768px) {
  .c0 {
    width: 100px;
    height: 100px;
  }
}

<button
    class="c0"
  />
</DocumentFragment>
`;

exports[`CalendarTile should match snapshot 1`] = `
<DocumentFragment>
  .c0 {
  border: none;
  width: 50px;
  height: 50px;
  position: relative;
  overflow: hidden;
  background-color: #FFFFFF;
}

.c0:hover {
  cursor: pointer;
}

.c1 {
  position: absolute;
  border-radius: 50%;
  width: 92.3076923076923px;
  height: 92.3076923076923px;
  background-color: #fff;
  top: NaNpx;
  left: NaNpx;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  top: 50%;
  left: 50%;
}

.c2 {
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  z-index: 100;
}

@media (min-width:768px) {
  .c0 {
    width: 100px;
    height: 100px;
  }
}

<button
    class="c0"
  >
    <div
      class="c1"
      color="#fff"
      size="120"
    />
    <p
      class="c2"
      data-testid="day"
    >
      1
    </p>
  </button>
</DocumentFragment>
`;
